syntax = "proto3";

package example;

option go_package = ".;example";

import "google/api/annotations.proto";
import "protoc-gen-validate/validate/validate.proto";

message Empty{}

message StatusResponse {
  bool ok = 1;
  string message = 2;
}

message HelloRequest{
  string name = 1 [(validate.rules).string = {
                      pattern:   ".*$",
                      max_bytes: 256
                   }];
}

message HelloResponse{
  string world = 1;
}

service ExampleServiceV1 {
  rpc Status(Empty) returns (StatusResponse) {
    option (google.api.http) = {
      get: "/api/v1/status"
    };
  }

  rpc Hello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      get: "/api/v1/hello"
    };
  }
}
